--- a/www/css/style.css
+++ b/www/css/style.css
@@ -21,6 +21,7 @@
         text-align: center;
         position:absolute; top:310px; 
         left:10px; right:10px;
+      font-weight: bold;
     }
     
     #time {
@@ -79,5 +80,5 @@
     #btnA{
       background-color: yellow;
       color: red;
-      
     }
+
